# tidyflow

./: .gitignore  .npmrc  AutoFlow.slnx  CHANGELOG.md  Cargo.toml  FolderFlow.slnx  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.ja-JP.md  README.md  README.pt-BR.md  crash_log.txt  file_browser_module.md  icon.af~lock~  init_error.txt  interface-ui.af  package.json  pnpm-lock.yaml  run_output.txt  trace.txt
apps/desktop/: README.md  package.json  vitest.config.ts
apps/desktop/src/: app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/autoflow-admin-server/: Cargo.toml
crates/autoflow-admin-server/src/: lib.rs  main.rs
crates/autoflow-application/: Cargo.toml
crates/autoflow-application/src/: blueprints.rs  execution.rs  jobs.rs  lib.rs  notify.rs  pack.rs  script_runner.rs  settings.rs
crates/autoflow-application/src/ports/: blueprint_store.rs  mod.rs
crates/autoflow-application/tests/: pack_integration.rs  script_integration.rs
crates/autoflow-core/: Cargo.toml
crates/autoflow-core/src/: admin.rs  lib.rs  queue.rs  scheduler.rs  watch.rs
crates/autoflow-domain/: Cargo.toml
crates/autoflow-domain/src/: admin.rs  audit.rs  blueprint.rs  counter.rs  error.rs  execution.rs  file_filter.rs  filter.rs  job.rs  lib.rs  notify.rs  path_policy.rs  schedule.rs  scripts.rs  settings.rs  transfer.rs  watch.rs
crates/autoflow-domain/src/tokenizer/: mod.rs
crates/autoflow-infrastructure/: Cargo.toml
crates/autoflow-infrastructure/migrations/: 001_init.sql  002_ui_state.sql  003_blueprints.sql  004_admin_commands.sql
crates/autoflow-infrastructure/src/: admin.rs  audit.rs  blueprints.rs  database.rs  jobs.rs  lib.rs  secrets.rs  settings.rs  ui_state.rs
docs/: RELATORIO_DEV_IA.md  clean-code-guidelines.md  nim_AutoFlow_prd_arquitetura_roadmap.md  nim_folderflow_prd_arquitetura_roadmap.md  prd-tecnico.md  project-intake.md
docs/WIKI/: Home.md  Technical-Architecture.md  Troubleshooting.md  User-Guide.md
docs/adr/: ADR-001-stack-tecnica.md  ADR-002-stack-tauri-svelte-rust.md
docs/branding/: icon.af
docs/plans/: automation-hub-control-tower.md  blueprint-separation-plan.md  blueprint-ultimate-refinement.md  feature-expansion-roadmap.md  file-browser-module-plan.md  native-notifications-plan.md  premium-dashboard-analysis.md  premium-header-automation.md  premium-queue-analysis.md  premium-settings-analysis.md  settings-about-changelog-plan.md  sprint-0-plan.md  unified-automation-center.md
docs/specs/: contratos-principais.md  smart-renaming-engine.md
docs/specs/schemas/: ipc-v2.schema.json
docs/templates/: ADR-001-template.md  README-documentation-kit.md  prd-tecnico-template.md  project-intake-template.md  spec-contratos-template.md  sprint-0-plan-template.md
docs/v2/: ADMIN-MONITORING-SPEC.md  API-IPC.md  ARCHITECTURE.md  BLUEPRINT-SPEC.md  DOMAIN.md  JOB-ADVANCED-SPEC.md  PROJECT-STRUCTURE.md  README.md  ROADMAP.md  STACK.md  UI-DESIGN-SYSTEM.md  WATCH-SPEC.md
installer/: AutoFlowInstaller.iss  install.ps1  install.sh
src/AutoFlow.App/: App.axaml  App.axaml.cs  AutoFlow.App.csproj  AutoFlow.App.sln  Program.cs  ViewLocator.cs  app.manifest
src/AutoFlow.App/Converters/: BlueprintTypeToIconConverter.cs  EnumLocalizationConverter.cs  EqualityConverters.cs  FileSizeConverter.cs  PageToColorConverter.cs  SpeedToHeightConverter.cs  StatusConverters.cs
src/AutoFlow.App/Localization/: LclExtension.cs
src/AutoFlow.App/Services/: AvaloniaNotificationService.cs  AvaloniaStorageService.cs  ThemeService.cs
src/AutoFlow.App/Styles/: Themes.axaml
src/AutoFlow.App/ViewModels/: AuditEntryViewModel.cs  AutomationViewModel.cs  BlueprintEditorViewModel.cs  BlueprintItemViewModel.cs  BlueprintViewModel.cs  DashboardViewModel.cs  DonateViewModel.cs  HistoryViewModel.cs  JobEditorViewModel.cs  JobItemViewModel.cs  JobLogViewModel.cs  MainWindowViewModel.cs  PreviewWindowViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs
src/AutoFlow.App/Views/: AutomationView.axaml  AutomationView.axaml.cs  BlueprintEditorWindow.axaml  BlueprintEditorWindow.axaml.cs  BlueprintView.axaml  BlueprintView.axaml.cs  ChangelogWindow.axaml  ChangelogWindow.axaml.cs  DashboardView.axaml  DashboardView.axaml.cs  DonateWindow.axaml  DonateWindow.axaml.cs  HistoryView.axaml  HistoryView.axaml.cs  JobEditorView.axaml  JobEditorView.axaml.cs  JobEditorWindow.axaml  JobEditorWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  PreviewWindow.axaml  PreviewWindow.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs
src/AutoFlow.Application/: AutoFlow.Application.csproj  Class1.cs
src/AutoFlow.Application/Helpers/: PathValidator.cs  SpeedTracker.cs
src/AutoFlow.Application/Interfaces/: IAppLogger.cs  IAuditService.cs  IAuthorizedPathProvider.cs  IBlueprintStore.cs  ICloudHydrationService.cs  IEncryptionService.cs  IExternalNotificationService.cs  IFailureStore.cs  IFileExplorerService.cs  IFileOperator.cs  IHashService.cs  IJobQueue.cs  IJobStore.cs  ILocalizationService.cs  IMetadataService.cs  INotificationService.cs  IOrganizationService.cs  IRollbackStore.cs  ISchedulerService.cs  IScriptRunner.cs  ISettingsStore.cs  IStorageService.cs  IWatchService.cs  (+1 more)
src/AutoFlow.Domain/: Class1.cs
src/AutoFlow.Infrastructure/: AuthorizedPathProvider.cs  AutoFlow.Infrastructure.csproj  Class1.cs
src/AutoFlow.Service/: AutoFlow.Service.csproj  Program.cs  Worker.cs
src/FolderFlow.App/: App.axaml  App.axaml.cs  FolderFlow.App.csproj  FolderFlow.App.sln  Program.cs  ViewLocator.cs  app.manifest  error_run.txt
src/FolderFlow.Application/: Class1.cs  FolderFlow.Application.csproj
src/FolderFlow.Domain/: Class1.cs
src/FolderFlow.Infrastructure/: Class1.cs  FolderFlow.Infrastructure.csproj
src/FolderFlow.Service/: FolderFlow.Service.csproj  Program.cs  Worker.cs
tests/AutoFlow.Tests.Unit/: AutoFlow.Tests.Unit.csproj  ExecutionEngineTests.cs  SchedulePolicyTests.cs  UnitTest1.cs
tests/FolderFlow.Tests.Unit/: ExecutionEngineTests.cs  FolderFlow.Tests.Unit.csproj  SchedulePolicyTests.cs  UnitTest1.cs
(+221 files in other folders)
