[package]
name = "autoflow-admin-server"
version.workspace = true
edition.workspace = true

[dependencies]
autoflow-domain = { path = "../autoflow-domain" }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
